# MW

./: .gitmodules  LICENSE  README.md  helloWorld
bin-mw/: install.sh
jsonnet/: install.sh
llvm/: install.sh
src/: CMakeLists.txt  JSONBaseListener.cpp  JSONBaseListener.h  JSONBaseVisitor.cpp  JSONBaseVisitor.h  JSONLexer.cpp  JSONLexer.h  JSONListener.cpp  JSONListener.h  JSONParser.cpp  JSONParser.h  JSONVisitor.cpp  JSONVisitor.h  MWMain.cpp
src/app/: expression.py  gen.py
